--- a/src/css/components/InteractiveInfographic.scss
+++ b/src/css/components/InteractiveInfographic.scss
@@ -191,10 +191,17 @@
 	overflow-y: scroll;
 }
 
+.infographic-container-left {
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	margin-right: 15px;
+}
+
 .piechart-legend {
 	font-family: Merriweather, Georgia, serif;
 	font-size: 14px;
-	width: 650px;
+	width: 100%;
 	z-index: 1000;
 	border-bottom-right-radius: 4px;
 	border-bottom-left-radius: 4px;
