--- a/src/css/components/DayPicker.scss
+++ b/src/css/components/DayPicker.scss
@@ -1,20 +1,24 @@
-.day-picker
-  p
+.day-picker {
+  p {
     margin-bottom: 10px
+  }
+}
 
-.day-picker-container
-  margin-bottom: 10px
-  padding-right: 30px
+.day-picker-container {
+  margin-bottom: 10px;
+  padding-right: 30px;
 
-  input
-    font-size: 10px
-    padding-left: 10px
-    height: 36px
-    width: 100%
-    border-radius: 3px
-    border-style: solid
-    border-width: 1px
-    border-color: #BFD4DF
+  input {
+    font-size: 10px;
+    padding-left: 10px;
+    height: 36px;
+    width: 100%;
+    border-radius: 3px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #BFD4DF;
+  }
+}
 
 
 /* DayPicker styles */
