--- a/src/css/components/ReactSelect.scss
+++ b/src/css/components/ReactSelect.scss
@@ -19,10 +19,10 @@ select::-ms-expand {
 .Select {
   position: relative;
 }
-.Select input::-webkit-contacts-auto-fill-button,
-.Select input::-webkit-credentials-auto-fill-button {
-  display: none !important;
-}
+//.Select input::-webkit-contacts-auto-fill-button
+//.Select input::-webkit-credentials-auto-fill-button {
+//  display: none !important;
+//}
 .Select input::-ms-clear {
   display: none !important;
 }
@@ -224,7 +224,7 @@ select::-ms-expand {
 .Select--multi .Select-clear-zone {
   width: 17px;
 }
-.Select-arrow-zone
+.Select-arrow-zone {
   cursor: pointer;
   display: table-cell;
   position: relative;
@@ -234,7 +234,7 @@ select::-ms-expand {
   padding-right: 5px;
 
 
-  .Select-arrow
+  .Select-arrow {
     border-color: #BFD4DF transparent transparent;
     border-style: solid;
     border-width: 5px 5px 2.5px;
@@ -242,6 +242,8 @@ select::-ms-expand {
     height: 0;
     width: 0;
     top: -2px;
+  }
+}
 
 .Select--rtl .Select-arrow-zone {
   padding-right: 0;
