Fixed chart size,missing chart, paging, missing scroll and the disclaimer

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -385,3 +385,8 @@ h5, .font-size-5 {
      flex-direction: column;
    }
  }
+
+  .recharts-wrapper svg {
+    width: auto !important;
+    height: auto !important;
+  }
