--- a/src/css/components/DocMarkdown.scss
+++ b/src/css/components/DocMarkdown.scss
@@ -83,12 +83,24 @@
 	margin-bottom: calc(1.05rem / 2);
 }
 
-.doc-content > ul {
+
+.doc-content > ul > li > ul > li {
+  display: list-item;
+  font-size: 17px;
+  list-style-position: outside;
+}
+
+.doc-content > ul,
+.doc-content > ul > li > ul {
 	padding-left: 1.4rem;
 }
 
-.doc-content > ul > li {
+.doc-content > ul > li, {
 	list-style-type: disc;
+}
+
+.doc-content > ul > li > ul > li {
+  list-style-type: circle;
 }
 
 .doc-content > ol {
