--- a/src/css/components/FieldExplorer.scss
+++ b/src/css/components/FieldExplorer.scss
@@ -16,8 +16,8 @@
 }
 
 .field-name:hover {
-	background-color: $clrPrimary;
-	color: $clrWhite;
+	background-color: vars.$clrPrimary;
+	color: vars.$clrWhite;
 }
 
 .field-list {
