--- a/src/css/components/BlogRoll.scss
+++ b/src/css/components/BlogRoll.scss
@@ -131,7 +131,7 @@
 	letter-spacing: 1px;
 }
 
-@media (max-width: $tablet) {
+@media (max-width: vars.$tablet) {
 	.blog-list {
 		padding-left: 0;
 		padding-top: 4vw;
