--- a/src/css/components/CommunityApps.scss
+++ b/src/css/components/CommunityApps.scss
@@ -47,7 +47,7 @@
 	background-size: 15px;
 }
 
-@media (max-width: $tablet) {
+@media (max-width: vars.$tablet) {
 	.apps-section {
 		width: 100%;
 	}
