--- a/src/css/components/DocMarkdown.scss
+++ b/src/css/components/DocMarkdown.scss
@@ -108,14 +108,14 @@
 	margin-top: 4.2rem;
 }
 
-@media (max-width: $tablet) {
+@media (max-width: vars.$tablet) {
 	.doc-container {
 		padding-left: 0;
 		padding-top: 44px;
 	}
 }
 
-@media (min-width: $bpTab) {
+@media (min-width: vars.$bpTab) {
 	.doc-content,
   .markdown-content {
 		margin-left: auto;
