--- a/src/css/components/DocSidebar.scss
+++ b/src/css/components/DocSidebar.scss
@@ -18,7 +18,7 @@
 
 .sidebar-item,
 .sidebar-header {
-	color: vars.vars.$clrBase;
+	color: vars.$clrBase;
 	border-radius: 0;
 	font-size: vars.$pSize;
 	text-align: left;
