--- a/src/css/_table.scss
+++ b/src/css/_table.scss
@@ -1,3 +1,5 @@
+@use './vars';
+
 .table {
 	width: 100%;
 	max-width: 100%;
@@ -206,6 +208,6 @@
 }
 
 .table-header {
-	background: $clrGrayLight;
+	background: vars.$clrGrayLight;
 	font-weight: bold;
 }
