--- a/src/css/_update.scss
+++ b/src/css/_update.scss
@@ -1,3 +1,5 @@
+@use './vars';
+
 .update-post p,
 .update-post ul,
 .update-post ol {
@@ -5,8 +7,8 @@
 }
 
 .update-post li {
-	font-size: $pSize;
-	line-height: $pLH;
+	font-size: vars.$pSize;
+	line-height: vars.$pLH;
 	margin-bottom: 10px;
 }
 
