Approved crls web pages (#282)
* Added Approved CRLs page and relevant nav items

* Capitalized URL

* Fixed typo

* Updated push-site.sh

* Added full web pages

* PR updates

* PR updates

* PR updates

* PR updates

* PR updates

* Fixed the remaining CSS issues.

* Removed chart, fixed Data Dictionary

* Update API_LINK to point to the production FDA API

* Update CRL queries to point to the production FDA API

* Update data category for 'Other' to include Complete Response Letters

---------

Co-authored-by: Denis Krylov <dkrylovsb@users.noreply.github.com>

--- a/src/css/components/BlogRoll.scss
+++ b/src/css/components/BlogRoll.scss
@@ -1,4 +1,4 @@
-@import '../vars';
+@use '../vars';
 
 .blog-cards,
 .blog-list {
@@ -131,7 +131,7 @@
 	letter-spacing: 1px;
 }
 
-@media (max-width: $tablet) {
+@media (max-width: vars.$tablet) {
 	.blog-list {
 		padding-left: 0;
 		padding-top: 4vw;
