--- a/src/css/components/EndpointBox.scss
+++ b/src/css/components/EndpointBox.scss
@@ -1,4 +1,4 @@
-@import '../vars';
+@use '../vars';
 
 .ep-icon-container {
 	position: relative;
@@ -64,7 +64,7 @@
 	padding: 20px;
 }
 
-@media (max-width: $bpMob) {
+@media (max-width: vars.$bpMob) {
 	.ep-box {
 		width: 300px;
 	}
