--- a/src/css/components/APIUseSteps.scss
+++ b/src/css/components/APIUseSteps.scss
@@ -1,4 +1,4 @@
-@import '../vars';
+@use '../vars';
 
 .steps {
 	font-family: 'Source Sans Pro', sans-serif;
@@ -72,7 +72,7 @@
 	left: calc(50% - 1px);
 }
 
-@media (max-width: $tablet) {
+@media (max-width: vars.$tablet) {
 	.steps {
 		flex-direction: column;
 	}
