--- a/src/css/components/InfographicContainer.scss
+++ b/src/css/components/InfographicContainer.scss
@@ -1,4 +1,4 @@
-@import '../vars';
+@use '../vars';
 
 .tab {
 	overflow: hidden;
@@ -72,7 +72,7 @@
 	display: none;
 }
 
-@media (max-width: $bpMob) {
+@media (max-width: vars.$bpMob) {
 	.infographic {
 		display: none;
 	}
