--- a/src/css/components/KeyFacts.scss
+++ b/src/css/components/KeyFacts.scss
@@ -1,4 +1,4 @@
-@import '../vars';
+@use '../vars';
 
 .key-facts {
 	border-bottom: 1px solid #ccc;
@@ -35,7 +35,7 @@
 	width: 62%;
 }
 
-@media (max-width: $tablet) {
+@media (max-width: vars.$tablet) {
 	.key-facts li i {
 		display: none;
 	}
