--- a/src/css/components/PostHdr.scss
+++ b/src/css/components/PostHdr.scss
@@ -1,6 +1,6 @@
-@import '../vars';
+@use '../vars';
 
-@media (min-width: $bpTab) {
+@media (min-width: vars.$bpTab) {
 	.post-hdr {
 		min-height: 300px;
 	}
